# llama_ros

./: .gitignore  .gitmodules  CITATION.cff  Dockerfile  LICENSE  README.md  README_8md.html  annotated.html  base_8launch_8py.html  chat__llama__ros_8py.html  chat__prompt__formatter_8py.html  chat__utils_8cpp.html  chat__utils_8cpp__incl.map  chat__utils_8cpp__incl.md5  chat__utils_8hpp.html  chat__utils_8hpp__dep__incl.map  chat__utils_8hpp__incl.map  chat__utils_8hpp__incl.md5  chat__utils_8hpp_source.html  chatllama__demo__node_8py.html  chatllama__langgraph__demo__node_8py.html  chatllama__reasoning__demo__node_8py.html  chatllama__structured__demo__node_8py.html  chatllama__tools__demo__node_8py.html  chatllama__tools__node_8py.html  classes.html  classllama__cli_1_1command_1_1llama_1_1LlamaCommand-members.html  classllama__cli_1_1command_1_1llama_1_1LlamaCommand.html  classllama__cli_1_1verb_1_1launch_1_1LaunchVerb-members.html  classllama__cli_1_1verb_1_1launch_1_1LaunchVerb.html  classllama__cli_1_1verb_1_1launch_1_1LaunchVerb__coll__graph.md5  classllama__cli_1_1verb_1_1prompt_1_1PromptVerb-members.html  classllama__cli_1_1verb_1_1prompt_1_1PromptVerb.html  classllama__cli_1_1verb_1_1prompt_1_1PromptVerb__inherit__graph.map  classllama__demos_1_1chatllama__demo__node_1_1ChatLlamaDemoNode-members.html  classllama__demos_1_1chatllama__demo__node_1_1ChatLlamaDemoNode.html  classllama__demos_1_1chatllama__demo__node_1_1ChatLlamaDemoNode__inherit__graph.md5  classllama__demos_1_1chatllama__langgraph__demo__node_1_1ChatLlamaLanggraphDemoNode-members.html  classllama__demos_1_1chatllama__langgraph__demo__node_1_1ChatLlamaLanggraphDemoNode.html  classllama__demos_1_1chatllama__langgraph__demo__node_1_1ChatLlamaLanggraphDemoNode__coll__graph.map  (+435 more)
llama_bringup/: CMakeLists.txt  package.xml
llama_bringup/launch/: Qwen3.5-MTP.launch.py  airoboros.launch.py  alpaca.launch.py  base.launch.py  cybertron.launch.py  dolphin-mistral.launch.py  flan.launch.py  gorilla.launch.py  gpt4all.launch.py  guanaco.launch.py  hermes.launch.py  llama-3-speculative.launch.py  llama.launch.py  llama2.launch.py  llama3.launch.py  llama_chat.launch.py  llava.launch.py  localmentor.launch.py  marcoroni.launch.py  minicpm-2.6.launch.py  mistral.launch.py  neural-chat.launch.py  nous-hermes.launch.py  orca.launch.py  phi-2-cfr.launch.py  phi-2.launch.py  phi-3.launch.py  robin.launch.py  spaetzle.launch.py  stablebeluga.launch.py  stablelm-zephyr.launch.py  stablelm.launch.py  tulu.launch.py  vicuna.launch.py  vicuna_1.launch.py  westlake.launch.py  wizard-vicuna.launch.py  wizard.launch.py  wizardlm.launch.py  wizardlm_1.launch.py  (+1 more)
llama_bringup/llama_bringup/: utils.py
llama_bringup/models/: All-MiniLM-L6-v2.yaml  DeepSeek-R1.yaml  Falcon3.yaml  GPT-OSS.yaml  Gemma-2.yaml  Gemma-3.yaml  Gemma-4.yaml  Hermes.yaml  InternLM.yaml  InternVL3.yaml  Llama-3-speculative.yaml  Llama-3.yaml  Marcoroni.yaml  MiniCPM-2.5.yaml  MiniCPM-2.6.yaml  MiniCPM-o-2.6.yaml  MiniCPM-v4.yaml  Mistral.yaml  Phi-3-adapters.yaml  Phi-3.yaml  Phi-4.yaml  Qwen2-Audio.yaml  Qwen2-VL.yaml  Qwen2.yaml  Qwen3.5-MTP.yaml  Qwen3.yaml  SmolLM2-slots.yaml  SmolLM2.yaml  Spaetzle.yaml  StableLM-Zephyr.yaml  bge-base-en-v1.5.yaml  bge-reranker-v2-m3.yaml  gorilla.yaml  jina-reranker.yaml  llava-mistral.yaml  llava-phi-3.yaml  localmentor.yaml  multilingual-e5.yaml  mxbai-embed.yaml
llama_bringup/params/: Gemma-2.yaml  Llama-3.yaml  Marcoroni.yaml  MiniCPM-2.5.yaml  MiniCPM-2.6.yaml  OpenHermes-2.5-neural-chat-v3-3-Slerp-GGUF.yaml  Phi-3-adapters.yaml  Phi-3.yaml  Qwen2.yaml  Spaetzle-v60-7b-GGUF.yaml  Spaetzle.yaml  StableLM-Zephyr.yaml  bge-base-en-v1.5.yaml  jina-reranked.yaml  llava-1.6-mistral.yaml  llava-mistral.yaml  llava-phi-3.yaml  localmentor.yaml
llama_bringup/prompts/: Alpaca.yaml  ChatML.txt  ChatML.yaml  DeepSeek-R1.yaml  Gemma-2.yaml  StableLM-Zephyr.yaml  Vicuna.yaml  Zephyr.yaml  alpaca.txt  alpaca.yaml  chat-with-bob.txt  dolphin-mistral.txt  gorilla.txt  gorilla.yaml  llama3.txt  llama3.yaml  mistral.txt  mistral.yaml  neural-chat.txt  orca.txt  phi-2.txt  phi3.txt  phi3.yaml  robin.txt  stablebeluga.txt  system-user-assistant-hashes.yaml  tulu.txt  user-assistant-hashes.txt  vicuna.txt  vicuna_1.txt  zephyr.txt
llama_bt/: .clang-format  CMakeLists.txt  llama_tree_nodes.xml  package.xml
llama_bt/test/: CMakeLists.txt  test_register.cpp
llama_cli/: package.xml  setup.cfg  setup.py
llama_cli/test/: test_copyright.py
llama_cpp_vendor/: 0001-use-cuda-clip.patch  CMakeLists.txt  package.xml
llama_cpp_vendor/patches/: 0001-chat-qwen-parallel-toolcall-parse.patch
llama_demos/: CMakeLists.txt  package.xml
llama_demos/llama_demos/: chatllama_agent_demo_node.py  chatllama_audio_demo_node.py  chatllama_demo_node.py  chatllama_langgraph_demo_node.py  chatllama_multi_audio_demo_node.py  chatllama_multi_image_demo_node.py  chatllama_multi_image_user_demo_node.py  chatllama_pddl_demo_node.py  chatllama_reasoning_demo_node.py  chatllama_reasoning_tools_demo_node.py  chatllama_streaming_tools_demo_node.py  chatllama_structured_demo_node.py  chatllama_thinking_tools_demo_node.py  chatllama_tools_demo_node.py  chatllama_tools_node.py  llama_demo_node.py  llama_embeddings_demo_node.py  llama_rag_demo_node.py  llama_rerank_demo_node.py  llama_rerank_node.py  llama_slots_demo_node.py  llava_demo_node.py  mtmd_audio_demo_node.py
llama_hfhub_vendor/: CMakeLists.txt  package.xml
llama_msgs/: CMakeLists.txt  package.xml
llama_msgs/action/: GPT.action  GenerateChatCompletions.action  GenerateResponse.action
llama_msgs/msg/: AttentionInfo.msg  ChatChoice.msg  ChatChoiceChunk.msg  ChatContent.msg  ChatDeltaChunk.msg  ChatMessage.msg  ChatReasoningFormat.msg  ChatReqTool.msg  ChatTool.msg  ChatToolCall.msg  Choice.msg  Content.msg  GeneralInfo.msg  GrammarTrigger.msg  LoRA.msg  LogitBias.msg  LogitBiasArray.msg  Message.msg  Metadata.msg  ModelInfo.msg  PartialResponse.msg  Rank.msg  Response.msg  RoPEInfo.msg  SamplingConfig.msg  TokenProb.msg  TokenProbArray.msg  TokenizerInfo.msg  (+2 more)
llama_ros/: CMakeLists.txt  package.xml
(+3052 files in other folders)
