[project]
name = "llama_ros"
version = "6.0.3"
description = "ROS 2 packages to integrate llama.cpp into ROS 2"
requires-python = ">=3.10"
dependencies = [
    "langchain==1.2.10",
    "langchain-chroma==1.1.0",
    "langchain-community==0.4.1",
    "langchain-core==1.2.15",
    "langchain-openai==1.1.10",
    "langchain-text-splitters==1.1.1",
    "pydantic==2.12.5",
    "opencv-python==4.8.1.78",
]

[tool.uv]
package = false
override-dependencies = ["onnxruntime<1.21", "numpy<2"]
