<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>llama_bringup</name>
  <version>4.5.0</version>
  <description>Bringup package for llama_ros</description>
  <maintainer email="mgons@unileon.es">Miguel Ángel González Santamarta</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>llama_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
