<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>llama_bt</name>
    <version>1.0.0</version>
    <description>A package containing behavior trees plugins for the llama_ros stack.</description>
    <maintainer email="ajtudela@gmail.com">Alberto Tudela</maintainer>
    <license>MIT</license>
    <author email="ajtudela@gmail.com">Alberto Tudela</author>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend condition="$ROS_DISTRO == 'foxy' or $ROS_DISTRO == 'galactic' or $ROS_DISTRO == 'humble'">behaviortree_cpp_v3</depend>
    <depend condition="$ROS_DISTRO == 'iron' or $ROS_DISTRO == 'jazzy' or $ROS_DISTRO == 'rolling'">behaviortree_cpp</depend>
    <depend>nav2_behavior_tree</depend>
    <depend>ament_index_cpp</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_action</depend>
    <depend>rclcpp_lifecycle</depend>
    <depend>llama_msgs</depend>
    <test_depend>ament_cmake_clang_format</test_depend>
    <test_depend>ament_cmake_gtest</test_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>